# Facial_Recognition

./: CMakeLists.txt  Face.h  FaceDetector.cpp  README.md  main.cpp
face_model/: Face.cpp  Face.h  FaceDetector.cpp  FaceDetector.h
